---
source: packages/llvm/src/tests/functions/mod.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %"1" = alloca [4 x i8], align 1
  %"2" = getelementptr [4 x i8], [4 x i8]* %"1", i64 0, i64 0
  store i8 49, i8* %"2", align 1
  %"3" = getelementptr [4 x i8], [4 x i8]* %"1", i64 0, i64 1
  store i8 50, i8* %"3", align 1
  %"4" = getelementptr [4 x i8], [4 x i8]* %"1", i64 0, i64 2
  store i8 51, i8* %"4", align 1
  %"5" = getelementptr [4 x i8], [4 x i8]* %"1", i64 0, i64 3
  store i8 51, i8* %"5", align 1
  %"6" = getelementptr [4 x i8], [4 x i8]* %"1", i64 0, i64 0
  call void @"foo|_|"(i8* %"6")
  ret void
}

define void @"foo|_|"(i8* %0) {
main:
  ret void
}

